--- a/release/exercisebank-doc.tex
+++ b/release/exercisebank-doc.tex
@@ -1,5 +1,5 @@
-%% exercisebank v0.2.1-prereleaseb79 - 2018/08/27
-%% The LaTeX package exercisebank - version v0.2.1-prerelease (2018/08/27) build 79
+%% exercisebank v0.2.1b80 - 2018/08/28
+%% The LaTeX package exercisebank - version v0.2.1 (2018/08/28) build 80
 %% Manual/Documentation for exercisebank.sty
 %% -------------------------------------------------------------------------------------------
 %% Copyright (c) 2018 by Andreas Storvik Strauman
@@ -114,7 +114,7 @@
 
 
 \setlength{\parindent}{0pt}
-\title{{exercisebank - manual\\ v0.2.1-prerelease{\\[-0.5em]\footnotesize(build 79)}}}
+\title{{exercisebank - manual\\ v0.2.1{\\[-0.5em]\footnotesize(build 80)}}}
 \author{Andreas Strauman}
 \begin{document}
 \maketitle
@@ -376,7 +376,7 @@ This command will generate multiple sets:
 \end{dispListing}
 \end{docCommand}
 \begin{docCommand}{buildtags}{\marg{tagslist}\marg{setslist}}\addcontentsline{toc}{subsubsection}{\refCom{buildtags}}
-\defnew{v0.2.1-prerelease\\2018/08/27 }
+\defnew{v0.2.1\\2018/08/28 }
 This command will generate multiple sets:
 \begin{dispListing}
 \buildsets{tag,tag2,tag3}{set,set2,set3}
@@ -398,7 +398,7 @@ Reference a partproblem created by \dac{pplabel}\{\meta{label\}}. This prints e.
 You can do a lot of configurations on this package, and probably
  even more to come in later versions!
 \begin{docCommand}{ShowNumbers}{}\addcontentsline{toc}{subsubsection}{\refCom{ShowNumbers}}
-\updated{v0.2.0\\2018/07/21 }
+\updated{v0.2.1\\2018/08/28 }
  Shows the numbers in fron of the part problems and intros that should be used with
  \dac{exclude} and \dac{select}
 \end{docCommand}
@@ -481,7 +481,7 @@ The Norwegian translation would then be done with
 \end{docCommand}
 \filbreak\subsection{Problem options and tagging}
 \begin{docCommand}{nextproblem}{}\addcontentsline{toc}{subsubsection}{\refCom{nextproblem}}
-\defnew{v0.2.1-prerelease\\2018/08/27 }
+\defnew{v0.2.1\\2018/08/28 }
 Prior to a problem environment in an exercise file you can pass options
 using the \dac{nextproblem} command. If you e.g. wanted to hide one regardless
 of what set it is you'd do
@@ -684,10 +684,11 @@ Distance above Problem \# header
     \change{Introducing \refCom{buildsets}-command for building more than one set at a time.}
     \change{Ability to add front page with the \refKey{front page} setup-key.}
     \change{You can now remove the forced margin setup with \refKey{style margins}.}
-\newversion{v0.2.1-prerelease 2018/08/27}
+\newversion{v0.2.1 2018/08/28}
     \change{Added options for individual part problems using the \dac{nextproblem}-command}
     \change{Added tagging for part problems using using the \dac{nextproblem}-command and \dac{buildtags}-commands.}
-    \change[\gh{thorstengrothe}]{A special thanks to github user \texttt{@thorstengrothe} for doing testing and giving feedback on new features!}
+    \change{Fixed problems related to \dac{ShowNumbers} not showing correctly.}
+    \change{Fixed \dac{exec} so that it now can take paragraphs (made it \dac{long})}
 \chlogtable
 
 
