Credit where credit is due

--- a/docs/changelog.tex
+++ b/docs/changelog.tex
@@ -57,6 +57,6 @@
 
 
 % Testers and thanks
-% \thankyou{\gh{thorstengrothe} -- \ghURL{thorstengrothe}}
-\tester{\gh{thorstengrothe}}
+\thankyou{\gh{thorstengrothe} -- \ghURL{thorstengrothe} for help with testing and bug-reporting the current version (0.2.1)}
+% \tester{\gh{thorstengrothe}}
 \tester{\gh{tristelune1}}
