Point system added

--- a/docs/changelog.tex
+++ b/docs/changelog.tex
@@ -53,6 +53,7 @@
     \change{Added tagging for part problems using using the \dac{nextproblem}-command and \dac{buildtags}-commands.}
     \change{Fixed problems related to \dac{ShowNumbers} not showing correctly.}
     \change{Fixed \dac{exec} so that it now can take paragraphs (made it \dac{long})}
+    \change{Added point system}
 \chlogtable
 
 
