--- a/exercises/secondexercise.tex
+++ b/exercises/secondexercise.tex
@@ -2,20 +2,21 @@
 \begin{intro}
 	In this exercise, we'll be looking at \( \dots \)
 \end{intro}
-\nextproblem{tag=Y}
+\nextproblem{tag=Y, points=1}
 \begin{problem}
-  Y:Second exercise - problem this is not a chosen problem.
+  Second exercise - problem this is not a chosen problem. Tagged Y and is worth 1 point
 \end{problem}
 \nextproblem{tag=Y}
+\nextproblem{points=2}
 \begin{problem}
-  Y:Second exercise - this is not a chosen problem
+  Second exercise - might not be a chosen problem. \makeatletter Tagged \exb@currentTag and is worth \exb@currentPoints points\makeatother
 \end{problem}
 \begin{solution}
 	SOLUTION2
 \end{solution}
 \nextproblem{tag=N}
 \begin{problem}
-  N:\lipsum[1]
+  \lipsum[1] tagged N. No points
   \pplabel{TST}
 \begin{verbatim}
       VERBATIMTEXT3
@@ -26,7 +27,7 @@
 \end{solution}
 \nextproblem{tag=N}
 \begin{problem}
-N:\ppref{TST}\lipsum[2-3]
+\ppref{TST}\lipsum[2-3] tagged N. No points.
 \end{problem}
 \begin{solution}
 	SOLUTION4
