--- a/src/main.tex
+++ b/src/main.tex
@@ -17,17 +17,20 @@
 % Testing all makeset functions
 % \makeset{11}{firstexercise, \exclude{secondexercise}{1,2}, thirdexercise}
 % \makeset{11}{\exclude{secondexercise}{1,2}}
-% \makeset{11}{secondexercise}
+\makeset{11}{secondexercise}
 
-\makeset[nohead,intro]{11}{%
-\phead,
-\exclude{secondexercise}{2,3},
-\pbreak,
-\phead,
-\exec{\textbf{hello}},
-firstexercise,
-\select{thirdexercise}{1,2}%
-}
+
+\input{pointsystem}
+
+% \makeset[nohead,intro]{11}{%
+% \phead,
+% \exclude{secondexercise}{2,3},
+% \pbreak,
+% \phead,
+% \exec{\textbf{hello}},
+% firstexercise,
+% \select{thirdexercise}{1,2}%
+% }
 % \makeset{11}{secondexercise,
 % firstexercise,
 % thirdexercise%
@@ -46,5 +49,6 @@ firstexercise,
 \begin{document}
 % \buildtags{Y,N}{11}
 \buildset{11}
+\totalpoints
 % \sprite
 \end{document}
