--- a/src/problemoptions.tex
+++ b/src/problemoptions.tex
@@ -25,6 +25,11 @@
 %:\buildtags{hard}\{SETNAME\}, where SETNAME is chosen by a
 %:\makeset command.
 %:-
+%:§problemopts
+%:$problemKeys=Here are the \nextproblem keys:
+%:$$problemKeys
+%:-
+%%% points are defined in poinstystem.tex
 \newif\ifexb@opthides
 \providecommand\exb@currentTag{}
 \pgfkeys{
@@ -32,7 +37,7 @@
 default/.style={hide=false,tag=\relax},
 % print/.code={Hello there! #1},
 hide/.is if={exb@opthides},
-tag/.estore in=\exb@currentTag,
+tag/.estore in=\exb@currentTag
 % print/.code={\@dlog{#1}}
 }
 \def\nextproblem{\pgfqkeys{/exbank/problems}}
