--- a/src/problemstyle.tex
+++ b/src/problemstyle.tex
@@ -85,9 +85,11 @@
 	\if\@displayMetaCounter\@isTrue\relax%%
 		\gdef\exb@prePPHead{{\Large\themetacounter}:}
 	\fi%
+%:$triggers.=\Trigger\PartProblemHeaderSuffix:\\ Triggers after the part problem header.
+%:$triggers.= anything added to this trigger will happen within the header
 \if\exbank@opt@doMargins\@isTrue\relax%
-\leavevmode\smash{\llap{{\exb@prePPHead\exbank@opt@partProblemHeader}\hskip\ppMargin}}%
-\else{\exbank@opt@partProblemHeader}\fi%
+\leavevmode\smash{\llap{{\exb@prePPHead\exbank@opt@partProblemHeader\Trigger\PartProblemHeaderSuffix}\hskip\ppMargin}}%
+\else{\exbank@opt@partProblemHeader\Trigger\PartProblemHeaderSuffix}\fi%
 \ignorespaces}%
 \At\EndPartproblem{%
 	% \egroup%
