--- a/release/exercisebank-doc.tex
+++ b/release/exercisebank-doc.tex
@@ -1,5 +1,5 @@
-%% exercisebank v0.2.1-prereleaseb81 - 2018/08/28
-%% The LaTeX package exercisebank - version v0.2.1-prerelease (2018/08/28) build 81
+%% exercisebank v0.2.1-prereleaseb82 - 2018/08/29
+%% The LaTeX package exercisebank - version v0.2.1-prerelease (2018/08/29) build 82
 %% Manual/Documentation for exercisebank.sty
 %% -------------------------------------------------------------------------------------------
 %% Copyright (c) 2018 by Andreas Storvik Strauman
@@ -114,7 +114,7 @@
 
 
 \setlength{\parindent}{0pt}
-\title{{exercisebank - manual\\ v0.2.1-prerelease{\\[-0.5em]\footnotesize(build 81)}}}
+\title{{exercisebank - manual\\ v0.2.1-prerelease{\\[-0.5em]\footnotesize(build 82)}}}
 \author{Andreas Strauman}
 \begin{document}
 \maketitle
@@ -202,18 +202,18 @@ In \dac{makeset} you can just separate exercises with commas! Here is an example
 Let's say you have two files with exercises. One located in \texttt{exercises/circuits/RLC.tex} and one in \texttt{exercises/ohm/ohmsGeneralLaw.tex}, and you want to include partproblem 1 through 5 from \texttt{RLC.tex} and all of the exercises from \texttt{ohmsGeneralLaw.tex}.
 
 \begin{dispListing}
-\makeset{\select{circuits/RLC}{1,...,5}, ohmsGeneralLaw}
+\makeset{myExerciseSet}{\select{circuits/RLC}{1,...,5}, ohmsGeneralLaw}
 \end{dispListing}
 This will divide it up with problem headers. So that what is in the \texttt{RLC.tex}-file will be Problem 1, and \texttt{ohmsGeneralLaw.tex} Problem 2.
 \subsection{Mixnmatch}
 What if you want to make both of them the same exercise? Well, then you pass the [nohead] argument to \dac{makeset}:
 \begin{dispListing}
-\makeset[nohead]{\phead, \select{circuits/RLC}{1,...,5}, ohmsGeneralLaw}
+\makeset[nohead]{myExerciseSet}{\phead, \select{circuits/RLC}{1,...,5}, ohmsGeneralLaw}
 \end{dispListing}
 The \dac{phead} command makes a problem header. You can pass them as much as you want:
 
 \begin{dispListing}
-\makeset[nohead]{\phead, \select{circuits/RLC}{1,...,5},
+\makeset[nohead]{myExerciseSet}{\phead, \select{circuits/RLC}{1,...,5},
               ohmsGeneralLaw, \phead, someOtherExercise, moreExercises}
 \end{dispListing}
 
@@ -268,6 +268,22 @@ the same as exercise is in. E.g. if you have a declared the option
 
 You can change the root dir by doing \\
 \dac{exercisebanksetup}\brackets{\refKey{figure root directory}=figures}. See the \refKey{figure root directory} key for more info.
+
+\subsection{Points and tags for exercises}
+By default since version v0.2.1 there are now points and tags available through the \refCom{nextproblem} command.%
+To assign a points to a part problem you'd do
+\begin{dispListing}
+  \nextproblem{points=3,tag=difficult}
+  \begin{problem}
+    This problem is worth 3 points and has the `difficult' tag.
+  \end{problem}
+\end{dispListing}
+Then to build all exercises that has the `difficult' and e.g. the `easy' tag one would use the \refCom{buildtags} command.
+\begin{dispListing}
+  \makeset{myExerciseSet}{ohmsGeneralLaw}
+  \buildtags{dificult,easy}{ohmsGeneralLaw}
+\end{dispListing}
+
 
 That covers the basics. Enjoy
 \begin{marker}
@@ -346,7 +362,7 @@ This can be used later in makesets. E.g.
 \end{dispListing}
 \end{docCommand}
 \begin{docCommand}{exec}{\marg{macros}}\addcontentsline{toc}{subsubsection}{\refCom{exec}}
-\updated{v0.2.1-prerelease\\2018/08/28 }
+\updated{v0.2.1-prerelease\\2018/08/29 }
 You can use this in \dac{makeset} to execute commands between problems.
 E.g. to insert a new page in between two problems when using nohead:
 \begin{dispListing}
@@ -376,7 +392,7 @@ This command will generate multiple sets:
 \end{dispListing}
 \end{docCommand}
 \begin{docCommand}{buildtags}{\marg{tagslist}\marg{setslist}}\addcontentsline{toc}{subsubsection}{\refCom{buildtags}}
-\defnew{v0.2.1-prerelease\\2018/08/28 }
+\defnew{v0.2.1-prerelease\\2018/08/29 }
 This command will generate multiple sets:
 \begin{dispListing}
 \buildsets{tag,tag2,tag3}{set,set2,set3}
@@ -398,12 +414,12 @@ Reference a partproblem created by \dac{pplabel}\{\meta{label\}}. This prints e.
 You can do a lot of configurations on this package, and probably
  even more to come in later versions!
 \begin{docCommand}{ShowNumbers}{}\addcontentsline{toc}{subsubsection}{\refCom{ShowNumbers}}
-\updated{v0.2.1-prerelease\\2018/08/28 }
+\updated{v0.2.1-prerelease\\2018/08/29 }
  Shows the numbers in fron of the part problems and intros that should be used with
  \dac{exclude} and \dac{select}
 \end{docCommand}
 \begin{docCommand}{exercisebanksetup}{\marg{[key/values]}}\addcontentsline{toc}{subsubsection}{\refCom{exercisebanksetup}}
-\updated{v0.2.0\\2018/07/21 }
+\updated{v0.2.1-prerelease\\2018/08/29 }
  Here is a list of the different keys and their meaning
 \keyDef{part problems}{On/Off}{On}{
  This is whether or not to do part problems. E.g. 1a), 1b) etc.
@@ -424,6 +440,11 @@ You can do a lot of configurations on this package, and probably
  part problem \dac{thepartproblemcounter}. To make it a letter, as per default use \dac{alph}\{partproblemcounter\}\\
  Default is:\\
  \dac{large}\dac{textbf}\{(\dac{theproblemcounter}\dac{alph}{partproblemcounter\})}
+}
+\keyDef{part problem header suffix}{macro}{\meta{empty}}{
+ This sets the suffix problem header, and defaults to be the number of points
+ the current exercise is worth.
+ Default is \meta{empty}
 }
 \keyDef{solution header}{string}{see below}{
 \dac{large}\{\dac{textbf}{\dac{@tr}\brackets{Solution:\}}}
@@ -466,6 +487,16 @@ Where to load the front page. The commands \refCom{setName} is available.
 Whether or not to put problem headers and part problem headers out in the margins.
 }
 \end{docCommand}
+\keyDef{current points style}{style}{see below}{
+ This is how the points will be shown in the part problem headers.
+ the default code is by \gh{thorstengrote}
+ \texttt{~\dac{ifnum}\dac{exb@currentPoints}=\dac{z@}\dac{ifnum}\dac{totalpoints}=\dac{z@}\dac{else}\dac{phantom}\{0p\}\dac{fi}\dac{else}\dac{exb@currentPoints} p\dac{fi}~\dac{ignorespaces}}
+}
+\keyDef{disable points}{bool}{false}{
+ Whether or not to disable the point system.
+}
+
+
 \filbreak\subsection{Internationalization}
 \begin{docCommand}{translateExBank}{\marg{Translation key/vals}}\addcontentsline{toc}{subsubsection}{\refCom{translateExBank}}
 
@@ -481,7 +512,7 @@ The Norwegian translation would then be done with
 \end{docCommand}
 \filbreak\subsection{Problem options and tagging}
 \begin{docCommand}{nextproblem}{}\addcontentsline{toc}{subsubsection}{\refCom{nextproblem}}
-\defnew{v0.2.1-prerelease\\2018/08/28 }
+\defnew{v0.2.1-prerelease\\2018/08/29 }
 Prior to a problem environment in an exercise file you can pass options
 using the \dac{nextproblem} command. If you e.g. wanted to hide one regardless
 of what set it is you'd do
@@ -510,11 +541,20 @@ you can also tag problems using this:
 \dac{buildtags}\{hard\}\{SETNAME\}, where SETNAME is chosen by a
 \dac{makeset} command.
 \end{docCommand}
+Here are the \dac{nextproblem} keys:
+\keyDef{points}{number}{0}{
+ The number of points the next exercise is worth.
+ you can retrieve the total points using \dac{totalpoints}
+}
+
+
 \filbreak\subsection{Triggers}
 \begin{docCommand}{Trigger}{\marg{Any Macro}}\addcontentsline{toc}{subsubsection}{\refCom{Trigger}}
-\updated{v0.1.3\\2018/04/20 }
+\updated{v0.2.1-prerelease\\2018/08/29 }
  See \refCom{At}\\
  Available triggers:\\
+\dac{Trigger}\dac{PartProblemHeaderSuffix}:\\ Triggers after the part problem header.
+ anything added to this trigger will happen within the header
 \dac{Trigger}\dac{BeginPartproblem}:\\ Triggers before a partproblem is inserted\\
 \dac{Trigger}\dac{VeryBeginPartproblem}:\\ Triggers right after \dac{BeginPartproblem}. This is so that the user can do stuff before the actual headers start. The partproblem headers are invoked by \dac{At}\dac{VeryBeginPartproblem}\\
 \dac{Trigger}\dac{InputExercise}:\\ Triggers before a file is included\\\
@@ -546,7 +586,7 @@ where the package should be looking for exercises. Default is the same directory
 \end{docCommand}
 This package also includes some extra stuff. For example the \dac{At} and \dac{Trigger}
 \begin{docCommand}{At}{\marg{AnyMacro}}
-\updated{v0.1.3\\2018/04/20 }Here you can send any macro because it isn't evaluated! For example \dac{At}\dac{BeginSomething} is fine and even if \dac{BeginSomething} is not defined. Also and when using \dac{Trigger} it just ignores it if it didn't exist. It's pretty similar in function as to \dac{AtBeginDocument}.
+\updated{v0.2.1-prerelease\\2018/08/29 }Here you can send any macro because it isn't evaluated! For example \dac{At}\dac{BeginSomething} is fine and even if \dac{BeginSomething} is not defined. Also and when using \dac{Trigger} it just ignores it if it didn't exist. It's pretty similar in function as to \dac{AtBeginDocument}.
 \begin{dispListing}
  \At\BeginSomething{DoSomething}
  Which is triggered with
@@ -684,11 +724,12 @@ Distance above Problem \# header
     \change{Introducing \refCom{buildsets}-command for building more than one set at a time.}
     \change{Ability to add front page with the \refKey{front page} setup-key.}
     \change{You can now remove the forced margin setup with \refKey{style margins}.}
-\newversion{v0.2.1-prerelease 2018/08/28}
+\newversion{v0.2.1-prerelease 2018/08/29}
     \change{Added options for individual part problems using the \dac{nextproblem}-command}
     \change{Added tagging for part problems using using the \dac{nextproblem}-command and \dac{buildtags}-commands.}
     \change{Fixed problems related to \dac{ShowNumbers} not showing correctly.}
     \change{Fixed \dac{exec} so that it now can take paragraphs (made it \dac{long})}
+    \change{Added point system}
 \chlogtable
 
 
