Closes #53 (multiple tags), closes #54 (multiple pp in \select and \exclude), Closes #52 (\ShowTag command)

--- a/docs/changelog.tex
+++ b/docs/changelog.tex
@@ -59,5 +59,6 @@
 
 % Testers and thanks
 \thankyou{\gh{thorstengrothe} -- \ghURL{thorstengrothe} for help with testing and bug-reporting the current version (0.2.1)}
+\thankyou{\gh{tristelune1} -- \ghURL{tristelune1} for help with testing and bug-reporting the current version (0.2.1)}
 % \tester{\gh{thorstengrothe}}
-\tester{\gh{tristelune1}}
+% \tester{\gh{tristelune1}}
