--- a/exercisebank.sty
+++ b/exercisebank.sty
@@ -1,5 +1,5 @@
 % Source (with comments) can be found at https://github.com/Strauman/exercisebank/
-%% The LaTeX package exercisebank - version v0.2.1-prerelease (2018/08/29) - build 82
+%% The LaTeX package exercisebank - version v0.2.1 (2018/09/03) - build 83
 %% exercisebank.sty: Exercise bank
 %% -------------------------------------------------------------------------------------------
 %% Copyright (c) 2018 by Andreas Storvik Strauman <andreas dot s dot strauman at uit dot no>
@@ -13,9 +13,9 @@
 %% version 2008/05/04 or later.
 %% This work has the LPPL maintenance status `author-maintained'.
 %% This work consists of all files listed in README
-\ProvidesPackage{exercisebank}[2018/08/29 v0.2.1-prerelease Creates a setup that gives freedom in making sets and exercises.]
+\ProvidesPackage{exercisebank}[2018/09/03 v0.2.1 Creates a setup that gives freedom in making sets and exercises.]
 \xdef\exbank@quiet{1}
-\PackageWarningNoLine{exercisebank-v0.2.1-prerelease}{This package is in the beta stage, and if something unexpected happens please, oh pretty please, report it to https://github.com/Strauman/exercisebank. Thank you!}
+\PackageWarningNoLine{exercisebank-v0.2.1}{This package is in the beta stage, and if something unexpected happens please, oh pretty please, report it to https://github.com/Strauman/exercisebank. Thank you!}
 \@ifundefined{ownLineNoSpacesGotIt}{\@latex@warning{Compilation wont work unless \string\end{problem} and \string\end{solution} are on their own lines and without any spaces. This warning can be removed by doing \string\def\string\ownLineNoSpacesGotIt{} before \@backslashchar usepackage{exercisebank}}
 }{}
 \gdef\setExercisesDir#1{\@latex@error{\string\setExercisesDir is deprecated. Use \string\exercisebanksetup{exercise directory=#1} instead}{}\stop\bye
@@ -35,17 +35,17 @@
 \usepackage{needspace}
 \edef\@isTrue{1}
 \edef\@isFalse{0}
-\gdef\isin#1#2#3#4{ \def\needle{#2}
- \def\haystack{#1}
+\gdef\exb@int@isin#1#2#3#4{ \def\needle{#1}
+ \def\haystack{#2}
  \def\isFalse{0}
  \let\isInList = \isFalse
- \IfInteger{\needle}{}{\@latex@error{ISIN: Can't look for part problem that is not numeric!}{}\bye\stop}
+ \IfInteger{\needle}{}{\@latex@error{ISIN: Can't look for part problem that is not numeric: `\needle' in `\haystack'!}{}\bye\stop}
  \IfInteger{\haystack}{  \ifnum\haystack=\needle\relax
    #3
   \else
    #4
   \fi
-}{  \foreach\pp in #1{    \ifnum\pp=\needle\relax%
+}{  \foreach\pp in #2{    \ifnum\pp=\needle\relax%
      \gdef\isInList{1}
      #3
     \fi
@@ -56,6 +56,7 @@
 }
 }
 \newif\ifexb@isInList
+\newcounter{exb@isin@dots}
 \gdef\exb@isin#1#2#3#4{  \global\exb@isInListfalse
   \xdef\needle{#1}
   \xdef\haystack{#2}
@@ -92,9 +93,18 @@
 }%
 }
 }
+\def\exb@intersection@any#1#2#3#4{\readlist*\needlelist{#1}
+\newif\ifexb@isintersection
+  \foreachitem\needle\in\needlelist{    \exb@isin{\needle}{#2}{\exb@isintersectiontrue}{}
+}
+\ifexb@isintersection#3\else#4\fi
+}
 \edef\@isTrue{1}
 \edef\@isFalse{0}
 \gdef\ShowNumbers{\gdef\@displayMetaCounter{\isTrue}}
+\gdef\exb@showtags{\isFalse}
+\gdef\ShowTags{\gdef\exb@showtags{\isTrue}}
+\gdef\exb@printCurrentTags{Tags: \exb@currentTags~}
 \gdef\@DisplaySolutions{\@isFalse}
 \gdef\DisplaySolutions{\xdef\@DisplaySolutions{\isTrue}\@latex@warning{Showing solutions}}
 \gdef\ifDisplaySolutions{\if\@DisplaySolutions\@isTrue}
@@ -249,11 +259,15 @@ switches/.cd,
 	\stepcounter{partproblemcounter}%
 	\bgroup%
 	\gdef\exb@prePPHead{}
+	\gdef\exb@postPPHead{}
 	\if\@displayMetaCounter\@isTrue\relax%
 		\gdef\exb@prePPHead{{\Large\themetacounter}:}
 	\fi%
+	\if\exb@showtags\isTrue%
+		\gdef\exb@postPPHead{\exb@printCurrentTags}
+	\fi
 \if\exbank@opt@doMargins\@isTrue\relax%
-\leavevmode\smash{\llap{{\exb@prePPHead\exbank@opt@partProblemHeader\Trigger\PartProblemHeaderSuffix}\hskip\ppMargin}}%
+\leavevmode\smash{\llap{{\exb@prePPHead\exbank@opt@partProblemHeader\Trigger\PartProblemHeaderSuffix}\hskip\ppMargin}\exb@postPPHead}%
 \else{\exbank@opt@partProblemHeader\Trigger\PartProblemHeaderSuffix}\fi%
 \ignorespaces}%
 \At\EndPartproblem{%
@@ -263,11 +277,12 @@ switches/.cd,
 \At\BeginSolution{\hfill\break\vspace*{\solutionMarginAbove}{\exbank@opt@solutionHeader}}
 \At\EndSolution{}
 \newif\ifexb@opthides
-\providecommand\exb@currentTag{}
+\providecommand\exb@currentTags{}
 \pgfkeys{/exbank/problems/.cd,
 default/.style={hide=false,tag=\relax},
 hide/.is if={exb@opthides},
-tag/.estore in=\exb@currentTag
+tags/.estore in=\exb@currentTags,
+tag/.code={\pgfkeysalso{tags={#1}}}
 }
 \def\nextproblem{\pgfqkeys{/exbank/problems}}
 \At\EndProblem{%
@@ -366,8 +381,12 @@ tag/.estore in=\exb@currentTag
     \stepcounter{metacounter}
     \Trigger\DecideProblemDisplay
     \gdef\exb@pre@intro{}
+    \gdef\exb@post@intro{}
     \if\@displayMetaCounter\isTrue\relax%
-    \gdef\exb@pre@intro{{\leavevmode{\llap{{\Large\themetacounter}\hspace*{-\pMarginLeft}}}}\ignorespaces}
+    \gdef\exb@pre@intro{{\leavevmode{\llap{{\Large\themetacounter}:\hspace*{-\pMarginLeft}}}}\ignorespaces}
+    \fi
+    \if\exb@showtags\isTrue%
+    \xdef\exb@post@intro{\exb@printCurrentTags}
     \fi
     \if\@spriteMode\@isTrue
       \if\introarg\@isTrue
@@ -376,7 +395,7 @@ tag/.estore in=\exb@currentTag
     \fi
     \showhideproblem{%
       \tighten@paragraph%
-      \Trigger\BeginIntro\exb@pre@intro%
+      \Trigger\BeginIntro\exb@pre@intro\exb@post@intro%
 }
   \fi%
   \intromargin{-1em}
@@ -445,13 +464,12 @@ tag/.estore in=\exb@currentTag
     \ifnum\pdfstrcmp{\ppList}{\emptyList}=\z@\relax%
       \xdef\DisplayProblem{\ipm\exclude\T@\ipm\select\F@}
     \fi
-    \exb@isin{\themetacounter}{\ppList}{      \xdef\DisplayProblem{\ipm\exclude\F@\ipm\select\T@\ipm\normal\T@}
+    \exb@int@isin{\themetacounter}{\ppList}{      \xdef\DisplayProblem{\ipm\exclude\F@\ipm\select\T@\ipm\normal\T@}
 }{      \xdef\DisplayProblem{\ipm\exclude\T@\ipm\select\F@\ipm\normal\T@}
 }
-\@dlog{\exb@currentTag}
 \ifexb@tagbuildmode
 \ifnum\pdfstrcmp{\DisplayProblem}{\T@}=\z@\relax
-\exb@isin{\exb@currentTag}{\exb@tagList}{\global\exb@opthidesfalse}{\global\exb@opthidestrue}
+\exb@intersection@any{\exb@currentTags}{\exb@tagList}{\global\exb@opthidesfalse}{\global\exb@opthidestrue}
 \fi\fi
 }
 \pgfkeys{ /makeset/.is family, /makeset,
