--- a/src/helpers.tex
+++ b/src/helpers.tex
@@ -2,24 +2,12 @@
 \makeatletter
 \edef\@isTrue{1}
 \edef\@isFalse{0}
-% This file contains the definition of the \isin macro
-%:§ref
-%:=\isin{haystack}{needle}{True}{False}
-%: \meta{haystack} is a comma separated list of integers\\
-%: \meta{needle} is an integer\\
-%: Executes \meta{True} if \meta{needle} is found in \meta{haystack}
-%: else executes \meta{False}
-%:-
-% #1: haystack
-% #2: needle
-% #3: action if found in list
-% #4: action if not found in list
 \gdef\exb@int@isin#1#2#3#4{
- \def\needle{#2}
- \def\haystack{#1}
+ \def\needle{#1}
+ \def\haystack{#2}
  \def\isFalse{0}
  \let\isInList = \isFalse
- \IfInteger{\needle}{}{\@latex@error{ISIN: Can't look for part problem that is not numeric!}{}\bye\stop}
+ \IfInteger{\needle}{}{\@latex@error{ISIN: Can't look for part problem that is not numeric: `\needle' in `\haystack'!}{}\bye\stop}
  \IfInteger{\haystack}{
   \ifnum\haystack=\needle\relax
    #3
@@ -27,7 +15,7 @@
    #4
   \fi
  }{
-  \foreach \pp in #1{
+  \foreach \pp in #2{
     \ifnum\pp=\needle\relax%
      \gdef\isInList{1}
      #3
@@ -40,6 +28,17 @@
 }
 \newif\ifexb@isInList
 \newcounter{exb@isin@dots}
+%:§ref
+%:=\exb@isin{haystack}{needle}{True}{False}
+%: \meta{haystack} is a comma separated list of anything\\
+%: \meta{needle} is an integer\\
+%: Executes \meta{True} if \meta{needle} is found in \meta{haystack}
+%: else executes \meta{False}
+%:-
+% #1: haystack
+% #2: needle
+% #3: action if found in list
+% #4: action if not found in list
 \gdef\exb@isin#1#2#3#4{
   \global\exb@isInListfalse
   \xdef\needle{#1}
@@ -95,4 +94,13 @@
       \vss
     }%
   }
+}
+% TODO: FINISH
+\def\exb@intersection@any#1#2#3#4{
+\readlist*\needlelist{#1}
+\newif\ifexb@isintersection
+  \foreachitem\needle\in\needlelist{
+    \exb@isin{\needle}{#2}{\exb@isintersectiontrue}{}
+  }
+\ifexb@isintersection#3\else#4\fi
 }
