--- a/release/exercisebank-doc.tex
+++ b/release/exercisebank-doc.tex
@@ -1,5 +1,5 @@
-%% exercisebank v0.2.1b83 - 2018/09/03
-%% The LaTeX package exercisebank - version v0.2.1 (2018/09/03) build 83
+%% exercisebank v0.2.1b85 - 2018/09/04
+%% The LaTeX package exercisebank - version v0.2.1 (2018/09/04) build 85
 %% Manual/Documentation for exercisebank.sty
 %% -------------------------------------------------------------------------------------------
 %% Copyright (c) 2018 by Andreas Storvik Strauman
@@ -91,7 +91,8 @@
 \renewcommand\tableofcontents{\hypersetup{linkcolor=black}\oldTOC\hypersetup{linkcolor=Definition}}
 \reversemarginpar
 \def\updated#1{\tcbdocmarginnote{\bfseries{\color{blue}U}#1}}
-\def\defnew#1{\tcbdocmarginnote{\bfseries{\color{green}N}#1}}
+\definecolor{green(munsell)}{rgb}{0.0, 0.70, 0.47}
+\def\defnew#1{\tcbdocmarginnote{\bfseries{\color{green(munsell)}New:}#1}}
 
 \let\dac\docAuxCommand
 \def\mdac#1{\docAuxCommand{\expandafter\@gobble\string#1}}
@@ -114,7 +115,7 @@
 
 
 \setlength{\parindent}{0pt}
-\title{{exercisebank - manual\\ v0.2.1{\\[-0.5em]\footnotesize(build 83)}}}
+\title{{exercisebank - manual\\ v0.2.1{\\[-0.5em]\footnotesize(build 85)}}}
 \author{Andreas Strauman}
 \begin{document}
 \maketitle
@@ -362,7 +363,7 @@ This can be used later in makesets. E.g.
 \end{dispListing}
 \end{docCommand}
 \begin{docCommand}{exec}{\marg{macros}}\addcontentsline{toc}{subsubsection}{\refCom{exec}}
-\updated{v0.2.1\\2018/09/03 }
+\updated{v0.2.1\\2018/09/04 }
 You can use this in \dac{makeset} to execute commands between problems.
 E.g. to insert a new page in between two problems when using nohead:
 \begin{dispListing}
@@ -392,7 +393,7 @@ This command will generate multiple sets:
 \end{dispListing}
 \end{docCommand}
 \begin{docCommand}{buildtags}{\marg{tagslist}\marg{setslist}}\addcontentsline{toc}{subsubsection}{\refCom{buildtags}}
-\defnew{v0.2.1\\2018/09/03 }
+\defnew{v0.2.1\\2018/09/04 }
 This command will generate multiple sets:
 \begin{dispListing}
 \buildsets{tag,tag2,tag3}{set,set2,set3}
@@ -414,16 +415,16 @@ Reference a partproblem created by \dac{pplabel}\{\meta{label\}}. This prints e.
 You can do a lot of configurations on this package, and probably
  even more to come in later versions!
 \begin{docCommand}{ShowNumbers}{}\addcontentsline{toc}{subsubsection}{\refCom{ShowNumbers}}
-\updated{v0.2.1\\2018/09/03 }
+\updated{v0.2.1\\2018/09/04 }
  Shows the numbers in fron of the part problems and intros that should be used with
  \dac{exclude} and \dac{select}
 \end{docCommand}
 \begin{docCommand}{ShowTags}{}\addcontentsline{toc}{subsubsection}{\refCom{ShowTags}}
-\defnew{v0.2.1\\2018/09/03 }
+\defnew{v0.2.1\\2018/09/04 }
  Shows the tags in front of the part problems much like \dac{ShowNumbers}
 \end{docCommand}
 \begin{docCommand}{exercisebanksetup}{\marg{[key/values]}}\addcontentsline{toc}{subsubsection}{\refCom{exercisebanksetup}}
-\updated{v0.2.1\\2018/09/03 }
+\updated{v0.2.1\\2018/09/04 }
  Here is a list of the different keys and their meaning
 \keyDef{part problems}{On/Off}{On}{
  This is whether or not to do part problems. E.g. 1a), 1b) etc.
@@ -438,6 +439,12 @@ You can do a lot of configurations on this package, and probably
  the problem counter is accessed with \dac{theproblemcounter}.\\
  Defaults to\\
  \brackets{\dac{normalfont}\dac{Large}\dac{bfseries}\dac{@tr}\{Problem\}~\dac{theproblemcounter}}.
+}
+\keyDef{problem needs space}{dimension}{0.2\dac{pageheight}}{
+How much space has to be left on the page for a problem to start
+}
+\keyDef{no needspace}{bool}{false}{
+Don't use \dac{needspace} command (only used in \refKey{problem needs space})
 }
 \keyDef{part problem header}{macro}{see below}{
  This sets the problem header. To access the current problem, use \dac{theproblemcounter}, and then the current
@@ -516,7 +523,7 @@ The Norwegian translation would then be done with
 \end{docCommand}
 \filbreak\subsection{Problem options and tagging}
 \begin{docCommand}{nextproblem}{}\addcontentsline{toc}{subsubsection}{\refCom{nextproblem}}
-\defnew{v0.2.1\\2018/09/03 }
+\defnew{v0.2.1\\2018/09/04 }
 Prior to a problem environment in an exercise file you can pass options
 using the \dac{nextproblem} command. If you e.g. wanted to hide one regardless
 of what set it is you'd do
@@ -561,7 +568,7 @@ Here are the \dac{nextproblem} keys:
 
 \filbreak\subsection{Triggers}
 \begin{docCommand}{Trigger}{\marg{Any Macro}}\addcontentsline{toc}{subsubsection}{\refCom{Trigger}}
-\updated{v0.2.1\\2018/09/03 }
+\updated{v0.2.1\\2018/09/04 }
  See \refCom{At}\\
  Available triggers:\\
 \dac{Trigger}\dac{PartProblemHeaderSuffix}:\\ Triggers after the part problem header.
@@ -597,7 +604,7 @@ where the package should be looking for exercises. Default is the same directory
 \end{docCommand}
 This package also includes some extra stuff. For example the \dac{At} and \dac{Trigger}
 \begin{docCommand}{At}{\marg{AnyMacro}}
-\updated{v0.2.1\\2018/09/03 }Here you can send any macro because it isn't evaluated! For example \dac{At}\dac{BeginSomething} is fine and even if \dac{BeginSomething} is not defined. Also and when using \dac{Trigger} it just ignores it if it didn't exist. It's pretty similar in function as to \dac{AtBeginDocument}.
+\updated{v0.2.1\\2018/09/04 }Here you can send any macro because it isn't evaluated! For example \dac{At}\dac{BeginSomething} is fine and even if \dac{BeginSomething} is not defined. Also and when using \dac{Trigger} it just ignores it if it didn't exist. It's pretty similar in function as to \dac{AtBeginDocument}.
 \begin{dispListing}
  \At\BeginSomething{DoSomething}
  Which is triggered with
@@ -736,7 +743,7 @@ Distance above Problem \# header
     \change{Introducing \refCom{buildsets}-command for building more than one set at a time.}
     \change{Ability to add front page with the \refKey{front page} setup-key.}
     \change{You can now remove the forced margin setup with \refKey{style margins}.}
-\newversion{v0.2.1 2018/09/03}
+\newversion{v0.2.1 2018/09/04}
     \change{Added options for individual part problems using the \dac{nextproblem}-command}
     \change{Added tagging for part problems using using the \dac{nextproblem}-command and \dac{buildtags}-commands.}
     \change{Fixed problems related to \dac{ShowNumbers} not showing correctly.}
